Segundo commit- resolução de bugs e criação de novas funçoes

--- a/wsfrontend-fabrica25.2/src/app/globals.css
+++ b/wsfrontend-fabrica25.2/src/app/globals.css
@@ -2,6 +2,9 @@
 :root {
   --cordefundo: #ffffff;
   --corheader: red;
+  --corblack: #000000;
+  --corpoker: #f1ebeb;
+  --corinfo: #c4c4c4;
 }
 
 html{
